  *************
  * v3.0 Beta 2
  *************

    * Bugfix CORE-4713
        "BLOB not found" error at rollback after insert into table with expression index
      Contributor(s):
        Vlad Khorsun <hvlad at users.sf.net>

    * Bugfix CORE-4706
        ISQL pads blob columns wrongly when the column alias has more than 17 characters
      Contributor(s):
        Adriano dos Santos Fernandes <adrianosf at gmail.com>

    * Bugfix CORE-4705
        FB3 SC crashes at disconnect after running EXECUTE STATEMENT as non-current user
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-4704
        Generator/exception permissions get corrupted after backup/restore
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-4702
        Join order in v3 is less optimal than in v2.x
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-4698
        Typing "add -user SYSDBA -pw masterkey -admin yes" into GSEC crashes firebird.exe
      Contributor(s):
        Vlad Khorsun <hvlad at users.sf.net>
        Alex Peshkov <peshkoff at mail.ru>

    * Bugfix CORE-4684
        Error while preparing a complex query ("Too many Contexts of Relation/Procedure/Views. Maximum allowed is 256")
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-4675
        Conditions like WHERE <field> = <cursor>.<field> don't use existing index
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-4673
        Computed index based on a computed column stores NULL for all its keys
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-4670
        Constraint violation error may be swallowed in some cases
      Contributor(s):
        Dmitry Yemanov <dimitr at firebirdsql.org>

    * Bugfix CORE-4668
        SELECT FROM MON$TABLE_STATS doesn`t work on SC and CS